vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinition_v2__c/SDO_Analytics_AIAgentTagDefinition_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentTagDefinition</label>
    <nameField>
        <label>AIAgentTagDefinition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentTagDefinitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>