vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinition_v2__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>