vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinition_v2__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>