vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentTagDefinition_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Developer_Name__c</columns>
    <columns>Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Created_Time__c</columns>
    <columns>Created_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>